metadata-classic/objects/becquerel_linked_accounts__x.object
<CustomObject>
    <description>becquerel__linked_accounts</description>
    <externalDataSource>Becquerel</externalDataSource>
    <externalName>becquerel__linked_accounts</externalName>
    <fields>
        <fullName>Account__c</fullName>
        <externalDeveloperName>User_PK</externalDeveloperName>
        <label>Account</label>
        <length>50</length>
        <referenceTargetField>Account.user_pk_id__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Linked Accounts</relationshipLabel>
        <relationshipName>becquerel_linked_accounts</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>Is_Linked_User_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is_Linked_User_Disabled</description>
        <externalDeveloperName>Is_Linked_User_Disabled</externalDeveloperName>
        <label>Is_Linked_User_Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_User_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is_User_Disabled</description>
        <externalDeveloperName>Is_User_Disabled</externalDeveloperName>
        <label>Is_User_Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link_Type__c</fullName>
        <description>Link_Type</description>
        <externalDeveloperName>Link_Type</externalDeveloperName>
        <label>Link_Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linked_User_Admin_Link__c</fullName>
        <description>Linked_User_Admin_Link</description>
        <externalDeveloperName>Linked_User_Admin_Link</externalDeveloperName>
        <label>Linked_User_Admin_Link</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linked_User_ID_Type__c</fullName>
        <description>Linked_User_ID_Type</description>
        <externalDeveloperName>Linked_User_ID_Type</externalDeveloperName>
        <label>Linked_User_ID_Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linked_User_ID__c</fullName>
        <description>Linked_User_ID</description>
        <externalDeveloperName>Linked_User_ID</externalDeveloperName>
        <label>Linked_User_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Linked_User_Signup_Date__c</fullName>
        <description>Linked_User_Signup_Date</description>
        <externalDeveloperName>Linked_User_Signup_Date</externalDeveloperName>
        <label>Linked_User_Signup_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Shared_Value__c</fullName>
        <description>Shared_Value</description>
        <externalDeveloperName>Shared_Value</externalDeveloperName>
        <label>Shared_Value</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestField__c</fullName>
        <externalDeveloperName>TestField</externalDeveloperName>
        <label>Test Field</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>User_Admin_Link__c</fullName>
        <description>User_Admin_Link</description>
        <externalDeveloperName>User_Admin_Link</externalDeveloperName>
        <label>User_Admin_Link</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID_Type__c</fullName>
        <description>User_ID_Type</description>
        <externalDeveloperName>User_ID_Type</externalDeveloperName>
        <label>User_ID_Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <description>User_ID</description>
        <externalDeveloperName>User_ID</externalDeveloperName>
        <label>User_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_PK__c</fullName>
        <description>User_PK</description>
        <externalDeveloperName>User_PK</externalDeveloperName>
        <label>User_PK</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Signup_Date__c</fullName>
        <description>User_Signup_Date</description>
        <externalDeveloperName>User_Signup_Date</externalDeveloperName>
        <label>User_Signup_Date</label>
        <type>DateTime</type>
    </fields>
    <label>becquerel__linked_accounts</label>
    <pluralLabel>becquerel__linked_accounts</pluralLabel>
</CustomObject>